# databricks-admin-ai-bridge

./: .gitignore  AUDIT_REPORT.md  FINAL_STATUS_REPORT.md  PHASE1_SUMMARY.md  PROJECT_SUMMARY.md  README.md  get_run_details.py  pyproject.toml  pytest.ini  qa.md  requirements-dev.txt  requirements.txt  run_notebook_07.py  test_agents_deploy.py  test_langchain_deploy.py
admin_ai_bridge/: __init__.py  audit.py  clusters.py  config.py  dbsql.py  errors.py  jobs.py  pipelines.py  schemas.py  security.py  tools_databricks_agent.py  usage.py
docs/: AGENT_TEST_GUIDE.md  INTEGRATION_TEST_EXECUTION_REPORT.md  INTEGRATION_TEST_GUIDE.md  TEST_REPORT.md  addendum.md  developer.md  spec.md
examples/: README.md  basic_usage.py  cluster_monitoring.py  cost_tracking.py  jobs_monitoring.py  pipeline_monitoring.py  query_analysis.py  security_audit.py
notebooks/: 00_admin_bridge_setup.py  01_jobs_admin_demo.py  02_dbsql_admin_demo.py  03_clusters_admin_demo.py  04_security_admin_demo.py  05_usage_cost_budget_demo.py  06_audit_pipelines_demo.py  07_agent_deployment.py  README.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_agent_deployment.py  test_agent_queries.py  test_agent_safety.py
tests/integration/: __init__.py  test_audit_integration.py  test_clusters_integration.py  test_dbsql_integration.py  test_jobs_integration.py  test_pipelines_integration.py  test_security_integration.py  test_usage_integration.py
tests/unit/: __init__.py  test_audit.py  test_clusters.py  test_config.py  test_dbsql.py  test_errors.py  test_jobs.py  test_pipelines.py  test_schemas.py  test_security.py  test_tools_databricks_agent.py  test_usage.py
